ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imc-ingress
  namespace: imc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imc-assignment
                port:
                  number: 80
